# musicPlayerQuiz

./: .cache  CMakeCache.txt  CMakeLists.txt  Makefile  app.py  cmake_install.cmake  fetch_songs  fetch_songs.py  index.html  main.cpp  quiz  quiz.cpp  quiz.hpp  requirements.txt  server  server.cpp  style.css
music-quiz-frontend/: package-lock.json  package.json
music-quiz-frontend/src/: App.js
music-quiz-frontend/src/components/: Quiz.js
static/: script.js  style.css
templates/: index.html
